--- a/assess-frontend/src/app/student-detail/student-detail.component.css
+++ b/assess-frontend/src/app/student-detail/student-detail.component.css
@@ -13,3 +13,13 @@ body{
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px; }
 th     { background:#eee; }
+
+.row{
+  background-color: #f9f9f9;
+  overflow-y: auto;
+  padding: 8px 16px;
+  /* height: 500px;
+  align-self: center;
+  align-content: center; */
+  border-collapse: collapse; width: 100%;
+}
