--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -1,4 +1,34 @@
-<!-- <app-header title="Momentz-4-ever"
-            [loggedInStatus]="true" ></app-header>
- -->
-    Welcome, you are now logged in!!!
+<nav class="navbar navbar-default">
+		<div class="container-fluid">
+		  <div class="navbar-header">
+			<a class="navbar-brand" style="color:darkgray">Grad Management</a>
+		  </div>
+		  <div class="title">
+		  <ul class="nav navbar-nav">
+			<li><a routerLink='/user' style="color:white">Admin</a></li>
+			<li class="active"><a routerLink='/homepage' style="color:white">Home</a></li>
+			<li><a style="color:white">Grad</a></li>
+			<li><a style="color:white">Course</a></li>
+			<li><a style="color:white">Score</a></li>
+			<li><a style="color:white">Ed</a></li>
+			<li ><a routerLink='/profile' style="color:white">Profile</a></li>
+      </ul>
+      <ul class="nav pull-right">
+          <li><button (click)="logout()"> Logout</button></li>
+          </ul>
+		</div>
+		</div>
+	  </nav>
+	
+
+<div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="title1">
+        <p>Welcome to Grad Management</p>
+      </div>
+       </div>
+    </div>
+</div>
+
+ 
