--- a/assess-frontend/src/app/selection.component.html
+++ b/assess-frontend/src/app/selection.component.html
@@ -14,22 +14,25 @@
 <body>
   <!-- <div class="panel panel-default"> -->
       <div class="panel-heading">
-          <h1>Assessment</h1>
+          <h1 align="center">Assessment Management</h1>
       </div>
 
       
-      <input type="text" id="searchByName" [(ngModel)]="nameSearch" name="searchByName" placeholder="Search By employeeName">
+      <input type="text" id="searchByName" [(ngModel)]="nameSearch" name="searchByName" placeholder="Search By Employee Name">
        <span class="spanclass">  </span>
       <button type="button" class="btn btn-default" routerLink="/detail/name/{{nameSearch}}"> 
           <span class="glyphicon glyphicon-search"></span> Search
         </button>
+        
+          <button type="button" class="button"  routerLink="/newDetails">Add Details</button>     
+      
       <!-- <i style="font-size:24px;color:rgba(54, 53, 53, 0.644)" class="fa">&#xf002;</i> -->
       <form [formGroup]="createAccountForm">  
       <div class="container">
           
         <div class="row"> 
            
-          <div class="col-sm-4">
+          <div class="col-sm-3">
                
               <select formControlName="years" class="form-control" (change)="onChangeYear($event.target.value)" [(ngModel)]="selectedyear">
                 <option [disabled]="true" [selected]= "true">Select year...</option>
@@ -37,7 +40,7 @@
                 <option *ngFor="let year of years" [value]="year">{{year}}</option>
               </select> 
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             
             <select formControlName="batches" class="form-control" (change)="onChangeBatch($event.target.value)" [(ngModel)]="selectedbatch">
               <option [disabled]="true" [selected]= "true">Select batch...</option>
@@ -45,17 +48,17 @@
             </select>
          
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             
-            <select formControlName="tests" class="form-control" (change)="onChangeTest($event.target.value)" [(ngModel)]="selectedtest">
+            <select formControlName="tests" class="form-control" [(ngModel)]="selectedtest">
               <option [disabled]="true" [selected]= "true">Select test...</option>
               <option *ngFor="let test of tests" [value]="test">{{test}}</option>
             </select>
           </div>
-          <!-- <div class="col-sm-3">
+           <div class="col-sm-3">
               <button type="button" class="button" (click)="myfunc()" >Search</button>     
           </div>
-           -->
+          
         </div>
       
       
@@ -66,30 +69,30 @@
       <table class="table table-striped table-bordered">
           <thead class="thead-dark">
               <tr>
-                <th>StudentId</th>
-                <th>Student Name</th>
+                <th>Employee Name</th>
                 <th>Score</th>
-                <!-- <th>Correct</th>
-                <th>Incorrect</th> -->
+                
+                <th>Sucess %</th>
                  <th>Rank</th> 
               </tr>
           </thead>
           <tbody>
             <tr *ngFor="let product of report; let i=index" [attr.data-index]="i">
                     
-              <!-- <td>{{product.studentname}}</td>
+              <a routerLink="/detail/name/{{product.gradEmployee.employeeName}}"> <td>{{product.gradEmployee.employeeName}}</td> </a>
               <td>{{product.score}}</td>
-              <td>{{product.correct}}</td>
-              <td>{{product.incorrect}}</td>
-              <td>{{product.rank}}</td> -->
-              <a routerLink="/detail/{{product.gradEmployee.employeeId}}"> <td>{{product.gradEmployee.employeeId}}</td> </a>
+             
+              <td>{{((product.gradTest.correctQuestions*100)/(product.gradTest.correctQuestions+ product.gradTest.incorrectQuestions))}}</td>
+              <td>{{i+1}}</td>
+        
+              <!-- <a routerLink="/detail/{{product.gradEmployee.employeeId}}"> <td>{{product.gradEmployee.employeeId}}</td> </a>
               <td>{{product.gradEmployee.employeeName}}</td> 
-              <td>{{product.score}}</td>
+              <td>{{product.score}}</td> -->
 <!--                          
                <td>{{product.correct}}</td>
                <td>{{product.incorrect}}</td> -->
                
-              <td>{{i+1}}</td>
+              
           </tr>
           </tbody>
       </table>
