added grads route

--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -7,7 +7,7 @@
 		  <ul class="nav navbar-nav">
 			<li><a routerLink='/user' style="color:white">Admin</a></li>
 			<li class="active"><a routerLink='/home' style="color:white">Home</a></li>
-			<li><a style="color:white" href = "/grads" >Grad</a></li>
+			<li><a style="color:white" href = "/admin" >Grad</a></li>
 			<li><a style="color:white" href = "/course">Course</a></li>
 			<li><a style="color:white">Score</a></li>
 			<li><a style="color:white">Ed</a></li>
