--- a/assess-frontend/src/app/new-detail/new-detail.component.html
+++ b/assess-frontend/src/app/new-detail/new-detail.component.html
@@ -65,121 +65,122 @@
             <!-- Form -->
             <form (ngSubmit)="onSubmit()">
       
-                <!-- Employee Code -->
+                <!-- EmployeeId -->
                 <div class="form-group row">
-                    <label for="employeeCode" class="col-sm-3 col-form-label">Employee Code*</label>
+                    <label for="employeeCode" class="col-sm-3 col-form-label">Employee Id*</label>
                     <div class="col-sm-9">
                         <input placeholder="Employee Code" type="text" class="form-control" id="employeeCode"
-                            [(ngModel)]="employeeCode" name="employeeCode"  required />
+                            [(ngModel)]="details.employeeId" name="employeeCode"  required />
                     </div>
                 </div>
       
-                <!-- Name -->
-                <div class="form-group row">
-                    <label for="Name" class="col-sm-3 col-form-label">Name*</label>
-                    <div class="col-sm-9">
-                        <input placeholder="Name" type="text" class="form-control" id="Name" [(ngModel)]="name"
-                            name="Name" required />
-                    </div>
-                </div>
-                <!-- year -->
-                <div class="form-group row">
-                  <label for="year" class="col-sm-3 col-form-label">Year</label>
-                  <div class="col-sm-9">
-                        <select formControlName="years" class="form-control" (change)="onChangeYear($event.target.value)" [(ngModel)]="selectedyear">
-                                <option >Select year...</option>
-                                
-                                <option *ngFor="let year of years" [value]="year">{{year}}</option>
-                              </select>   
-                    <!-- <input placeholder="Year" type="text" class="form-control" id="year"
-                          [(ngModel)]="gradyear" name="doj" /> -->
-                  </div>
-              </div>
-              <!-- batch -->
-              <div class="form-group row">
-                <label for="batch" class="col-sm-3 col-form-label">Batch</label>
-                <div class="col-sm-9">
-                        <select formControlName="batches" class="form-control" (change)="onChangeBatch($event.target.value)" [(ngModel)]="selectedbatch">
-                                <option [disabled]="true" [selected]= "true">Select batch...</option>
-                                <option *ngFor="let batchinfo of batches" [value]="batchinfo">{{batchinfo}}</option>
-                              </select>
-                    <!-- <input placeholder="Batch" type="text" class="form-control" id="batch"
-                        [(ngModel)]="gradbatch" name="batch"  /> -->
-                </div>
-            </div>
-            
-      
-               
-                <!-- test name -->
-                <div class="form-group row">
-                    <label for="testname" class="col-sm-3 col-form-label">Test Name</label>
-                    <div class="col-sm-9">
-                            <select formControlName="tests" class="form-control" [(ngModel)]="selectedtest">
-                                    <option [disabled]="true" [selected]= "true">Select test...</option>
-                                    <option *ngFor="let test of tests" [value]="test">{{test}}</option>
-                                  </select>
-                        <!-- <input placeholder="Test name" type="text" class="form-control" id="testname"
-                            [(ngModel)]="testname" name="testname"  required /> -->
-                    </div>
-                </div>
-                <!-- total ques -->
-                <div class="form-group row">
-                  <label for="totalquestions" class="col-sm-3 col-form-label">Total Questions</label>
-                  <div class="col-sm-9">
-                      <input placeholder="Total Questions" type="text" class="form-control" id="totalquestions"
-                          [(ngModel)]="totalquestions" name="testname" required />
-                  </div>
-              </div>
-                 <!-- correct ques -->
-                 <div class="form-group row">
-                  <label for="correctquestions" class="col-sm-3 col-form-label">Correct Questions</label>
-                  <div class="col-sm-9">
-                      <input placeholder="Correct Questions" type="text" class="form-control" id="correctquestions"
-                          [(ngModel)]="correctquestions" name="testname"  required />
-                  </div>
-              </div>
-                
-               <!-- incorrect ques -->
+               <!-- Name -->
                <div class="form-group row">
-                <label for="incorrectquestions" class="col-sm-3 col-form-label">Incorrect Questions</label>
+                <label for="Name" class="col-sm-3 col-form-label">Name*</label>
                 <div class="col-sm-9">
-                    <input placeholder="Incorrect Questions" type="text" class="form-control" id="incorrectquestions"
-                        [(ngModel)]="incorrectquestions" name="testname"  required />
+                    <input placeholder="Name" type="text" class="form-control" id="Name" [(ngModel)]="details.name"
+                        name="Name" required />
                 </div>
             </div>
-             <!-- success % -->
-             <div class="form-group row">
-              <label for="successperc" class="col-sm-3 col-form-label">Success Percentage</label>
+            <!-- year -->
+            <div class="form-group row">
+              <label for="year" class="col-sm-3 col-form-label">Year</label>
               <div class="col-sm-9">
-                  <input placeholder="Success Percentage" type="text" class="form-control" id="successperc"
-                      [(ngModel)]="successperc" name="testname"  required />
+                    <select formControlName="years" class="form-control" (change)="onChangeYear($event.target.value)" [(ngModel)]="selectedyear">
+                            <option >Select year...</option>
+                            
+                            <option *ngFor="let year of years" [value]="year">{{year}}</option>
+                          </select>   
+                <!-- <input placeholder="Year" type="text" class="form-control" id="year"
+                      [(ngModel)]="gradyear" name="doj" /> -->
               </div>
           </div>
-      
+          <!-- batch -->
           <div class="form-group row">
-            <label for="score" class="col-sm-3 col-form-label">Score</label>
+            <label for="batch" class="col-sm-3 col-form-label">Batch</label>
             <div class="col-sm-9">
-                <input placeholder="Score" type="text" class="form-control" id="score"
-                    [(ngModel)]="score" name="testname"  required />
+                    <select formControlName="batches" class="form-control" (change)="onChangeBatch($event.target.value)" [(ngModel)]="details.batch">
+                            <option [disabled]="true" [selected]= "true">Select batch...</option>
+                            <option *ngFor="let batchinfo of batches" [value]="batchinfo">{{batchinfo}}</option>
+                          </select>
+                <!-- <input placeholder="Batch" type="text" class="form-control" id="batch"
+                    [(ngModel)]="gradbatch" name="batch"  /> -->
             </div>
         </div>
-      
-        <div class="form-group row">
-          <label for="rank" class="col-sm-3 col-form-label">Rank</label>
+        
+  
+           
+            <!-- test name -->
+            <div class="form-group row">
+                <label for="testname" class="col-sm-3 col-form-label">Test Name</label>
+                <div class="col-sm-9">
+                        <select formControlName="tests" class="form-control" (change)="onChangeTest($event.target.value)" [(ngModel)]="details.test">
+                                <option [disabled]="true" [selected]= "true">Select test...</option>
+                                <option *ngFor="let test of tests" [value]="test">{{test}}</option>
+                              </select>
+                    <!-- <input placeholder="Test name" type="text" class="form-control" id="testname"
+                        [(ngModel)]="testname" name="testname"  required /> -->
+                </div>
+            </div>
+            <!-- total ques -->
+            <div class="form-group row">
+              <label for="totalquestions" class="col-sm-3 col-form-label">Total Questions</label>
+              <div class="col-sm-9">
+                  <input placeholder="Total Questions" type="text" class="form-control" id="totalquestions"
+                      [(ngModel)]="details.totalquestions" name="testname" required />
+              </div>
+          </div>
+             <!-- correct ques -->
+             <div class="form-group row">
+              <label for="correctquestions" class="col-sm-3 col-form-label">Correct Questions</label>
+              <div class="col-sm-9">
+                  <input placeholder="Correct Questions" type="text" class="form-control" id="correctquestions"
+                      [(ngModel)]="details.correctquestions" name="testname"  required />
+              </div>
+          </div>
+            
+           <!-- incorrect ques -->
+           <div class="form-group row">
+            <label for="incorrectquestions" class="col-sm-3 col-form-label">Incorrect Questions</label>
+            <div class="col-sm-9">
+                <input placeholder="Incorrect Questions" type="text" class="form-control" id="incorrectquestions"
+                    [(ngModel)]="details.incorrectquestions" name="testname"  required />
+            </div>
+        </div>
+         <!-- success % -->
+         <div class="form-group row">
+          <label for="successperc" class="col-sm-3 col-form-label">Success Percentage</label>
           <div class="col-sm-9">
-              <input placeholder="Rank" type="text" class="form-control" id="rank"
-                  [(ngModel)]="rank" name="testname"  required />
+              <input placeholder="Success Percentage" type="text" class="form-control" id="successperc"
+                  [(ngModel)]="details.successperc" name="testname"  required />
           </div>
       </div>
-          
+  
+      <div class="form-group row">
+        <label for="score" class="col-sm-3 col-form-label">Score</label>
+        <div class="col-sm-9">
+            <input placeholder="Score" type="text" class="form-control" id="score"
+                [(ngModel)]="details.score" name="testname"  required />
+        </div>
+    </div>
+  
+    <div class="form-group row">
+      <label for="rank" class="col-sm-3 col-form-label">Rank</label>
+      <div class="col-sm-9">
+          <input placeholder="Rank" type="text" class="form-control" id="rank"
+              [(ngModel)]="details.rank" name="testname"  required />
+      </div>
+  </div>
+      
+        
             
-                
-                <div class="form-group row">
-                    <div class="col-sm-9">
-                        <button type="submit" class="btn btn-default" >Submit</button>
-                    </div>
+            <div class="form-group row">
+                <div class="col-sm-9">
+                    <button type="submit" class="btn btn-default">Submit</button>
                 </div>
-            </form>
-            <div class="alert alert-success" role="alert" [hidden]="!submitted">
-                You submitted successfully!
             </div>
+        </form>
+        <div class="alert alert-default" role="alert"  *ngIf="!submitted">
+            Submitted
+        </div>
+
