gradmanagement, course and login modules are merged and working

--- a/frontend/src/app/courses/header/header.component.html
+++ b/frontend/src/app/courses/header/header.component.html
@@ -70,10 +70,10 @@ class="province-menu">
   
 </select> -->
 
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand">Course Management</a>
+        <a class="navbar-brand">x1</a>
       </div>
       <ul class="nav navbar-nav">
         <li class="dropdown">
@@ -88,4 +88,4 @@ class="province-menu">
         </li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
