--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,50 @@
+<div *ngIf="loggedInStatus">
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- <div class="navbar-header">
+        <a class="navbar-brand" style="color:darkgray">Grad Management</a>
+      </div> -->
+      <div class="title">
+      <ul class="nav navbar-nav">
+        <li><a routerLink='/home' style="color:white">Home</a></li>
+        
+        <li><a style="color:white"  routerLink='/admin'  >Grad</a></li>
+        <li  class="nav-item dropdown">
+            <a style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Course
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a routerLink="/view">Schedules</a></li>
+                <li><a routerLink="/course">Courses</a></li>
+                <li><a routerLink="/trainer">Trainers</a></li>
+                <li><a routerLink="/batch">Batch</a></li>
+            </div>
+          </li>     <li><a  *ngIf="admin || trainer"  style="color:white">Score</a></li>
+        <li><a style="color:white">Ed</a></li>
+        <li><a routerLink='/admin-user'style="color:white" *ngIf="admin">Admin</a></li>
+        <li ><a routerLink='/user' style="color:white">Profile</a></li>
+        
+  </ul>
+  <ul class="nav pull-right">
+      <!-- <li><button (click)="logout()"> Logout</button></li> -->
+      <button type="button" class="btn btn-default btn-lg" (click) = "logout()" >logout</button>
 
- <router-outlet></router-outlet>
+      </ul>
+    </div>
+    </div>
+  </nav>
+
+
+<!-- <div class="container">
+<div class="row">
+  <div class="col-xs-12">
+    <div class="title1">
+    <p>Welcome to Grad Management</p>
+  </div>
+   </div>
+</div>
+</div> -->
+
+</div>
+
+<router-outlet></router-outlet>
