--- a/frontend/src/app/gradManagement/admin/showgrads/showgrads.component.html
+++ b/frontend/src/app/gradManagement/admin/showgrads/showgrads.component.html
@@ -2,9 +2,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
     <div class="panel panel-default">
-        <div class="panel-heading">
+        <!-- <div class="panel-heading">
             <h1>Grad Management</h1>
-        </div>
+        </div> -->
         <i style="font-size:24px;color:rgba(54, 53, 53, 0.644)" class="fa">&#xf002;</i>
         <input type="text" id="searchByName" [(ngModel)]="nameSearch" name="searchByName" placeholder="Search By Name">
         <input type="text" id="searchById" [(ngModel)]="empCodeSearch" name="searchById" placeholder="Search By Employee Code">
