--- a/frontend/src/app/main/frontpage/frontpage.component.html
+++ b/frontend/src/app/main/frontpage/frontpage.component.html
@@ -1,14 +1,14 @@
-<div class="navbar navbar-inverse navbar-static-top" style="height: 60px;background-color:dimgrey">
+<div class="navbar navbar-inverse navbar-static-top" style="height: 60px; background-color:#337ab7">
         <div class="container">
          <div class="row">
          <div class="col-xs-3">
              <div class="row">
                <div class="icons">
                <div class="col-xs-3">
-                   <img src="assets/images/acco.jpg" alt="Accolite" class="img-responsive">
+                   <img src="../../../favicon.ico" alt="Accolite" class="img-responsive">
                </div>
                <div class="col-xs-3">
-                   <a href="http://accolite.com/" style="color:white"><font size = 3>Home</font></a>
+                   <a routerLink="/front" style="color:white"><font size = 3>Home</font></a>
                  </div>
                  <div class="col-xs-3">
                      <a href="http://accolite.com/about.html" style="color:white"><font size = 3>About</font></a>
@@ -29,8 +29,8 @@
         <div class="icons">
          <div class="col-xs-3">
              <ul class="nav navbar-nav navbar-right" style="font-size: 15px">
-                 <li><a href="signup"><span class="glyphicon glyphicon-user" routerLink="signup" ></span> Sign Up</a></li>
-                 <li><a href="login"><span class="glyphicon glyphicon-log-in" routerLink="login"></span> Login</a></li>
+                 <li><a href="signup"><span class="glyphicon glyphicon-user" routerLink="signup" ></span ><font style="color:white"> Sign Up </font></a></li>
+                 <li><a href="login"><span class="glyphicon glyphicon-log-in" routerLink="login"></span><font style="color:white"> Login </font> </a></li>
                </ul>
            
          </div>  
@@ -38,8 +38,41 @@
          </div>  
        </div>       
    </div>
-   <img src="assets/images/back1.jpg" alt="Background" class="img-responsive">
-   <div class="container">
+
+   <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+   <div class="carousel-inner">
+      <div class="item active">
+        <img src="../../../assets/Images/back1.jpg" alt="Los Angeles">
+      </div>
+  
+      <div class="item">
+        <img src="../../../assets/Images/back.jpg" alt="Chicago">
+      </div>
+  
+      <div class="item">
+        <img src="../../../assets/Images/back3.jpg" alt="New York">
+      </div>
+    </div>
+  
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<!--    <img src="../../../assets/Images/back.jpg" alt="Background" class="img-responsive">
+ -->   <div class="container">
        <div class="row">
          <div class="col-xs-12">
            <div class="title1">
@@ -53,9 +86,8 @@
    </div>
  
    
-   <footer class="container-fluid text-center" style=" background-color: #f2f2f2;padding: 25px;margin-top: 30px">
+    <footer class="container-fluid text-center" style=" background-color: #f2f2f2;padding: 25px;margin-top: 30px">
        <p style="text-align: center">Only the Best Technical Minds</p>
      </footer>
    
-   
-     
+  
