--- a/frontend/src/app/main/home/home.component.html
+++ b/frontend/src/app/main/home/home.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<!-- <nav class="navbar navbar-default">
 		<div class="container-fluid">
 		  <div class="navbar-header">
 			<a class="navbar-brand" style="color:darkgray">Grad Management</a>
@@ -32,3 +32,4 @@
 </div>
 
  
+ -->
