--- a/frontend/src/app/main/user/user.component.html
+++ b/frontend/src/app/main/user/user.component.html
@@ -6,25 +6,25 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <div class="container">
-<br>
-<br>
+
 	<div class="row" id="main">
-        <div class="col-md-4 well" id="leftPanel">
-            <div class="row">
-                <div class="col-md-12">
-                	<div>
-        				<img src="http://lorempixel.com/200/200/abstract/1/" alt="Texto Alternativo" class="img-circle img-thumbnail">
-						<h2> {{loggedInStatus.firstName}} {{loggedInStatus.lastName}}</h2>
+		<div  id="leftPanel">
+			<div class="row">
+				<div class="col-md-12">
+					<div>
+						<img src="http://lorempixel.com/200/200/abstract/1/" alt="Texto Alternativo"
+							class="img-circle img-thumbnail">
 						<h4>{{loggedInStatus.emailId}}</h4>
-						
-        			<!-- 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						<h4><b>role:</b> {{loggedInStatus.role}}</h4>
+
+						<!-- 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         				tempor incididunt ut labore et dolore magna aliqua.</p> -->
-                        <div class="btn-group">
-                         <!--    <button type="button" class="btn btn-warning">
+						<!-- <div class="btn-group">
+                            <button type="button" class="btn btn-warning">
                                 Social</button>
                             <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
                                 <span class="caret"></span><span class="sr-only">Social</span>
-                            </button> -->
+                            </button> 
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="#">Twitter</a></li>
                                 <li><a href="https://plus.google.com/+Jquery2dotnet/posts">Google +</a></li>
@@ -32,39 +32,43 @@
                                 <li class="divider"></li>
                                 <li><a href="#">Github</a></li>
                             </ul>
-                        </div>
-        			</div>
-        		</div>
-            </div>
-        </div>
-        <div class="col-md-8 well" id="rightPanel">
-            <div class="row">
-    <div class="col-md-12">
-    	<form [formGroup]="loginForm" (submit)="updateUser($event)" role="form">
-			<h2>Edit your profile.<small>It's always easy</small></h2>
-			<hr class="colorgraph">
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-6">
-					<div class="form-group">
-                        <input type="text" name="first_name" formControlName="first_name" id="first_name" class="form-control input-lg" placeholder="First Name" tabindex="1">
+                        </div> -->
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6">
-					<div class="form-group">
-						<input type="text"  formControlName="last_name" id="last_name" class="form-control input-lg" placeholder= "Last Name" tabindex="2">
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6">
-						<div class="form-group">
-							<input type="text"  formControlName="mobile_no" id="mobile_no" class="form-control input-lg" placeholder= "Mobile Number" tabindex="2">
-						</div>
-				</div>
-			
 			</div>
-			<!-- <div class="form-group">
+		</div>
+
+		<div class="col-md-8 well" id="rightPanel">
+			<div class="row">
+				<div class="col-md-12">
+					<form [formGroup]="loginForm" (submit)="updateUser($event)" role="form">
+						<h2>Edit your profile<small> @accolite</small></h2>
+						<hr class="colorgraph">
+						<div class="row">
+							<div class="col-xs-12 col-sm-6 col-md-6">
+								<div class="form-group">
+									<input type="text" name="first_name" formControlName="first_name" id="first_name"
+										class="form-control input-lg" placeholder="First Name" tabindex="1">
+								</div>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-6">
+								<div class="form-group">
+									<input type="text" formControlName="last_name" id="last_name"
+										class="form-control input-lg" placeholder="Last Name" tabindex="2">
+								</div>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-6">
+								<div class="form-group">
+									<input type="text" formControlName="mobile_no" id="mobile_no"
+										class="form-control input-lg" placeholder="Mobile Number" tabindex="2">
+								</div>
+							</div>
+
+						</div>
+						<!-- <div class="form-group">
 				<input type="text" formControlName="email" class="form-control input-lg" placeholder="Email id" tabindex="4">
 			</div> -->
-		<!-- 	<div class="row">
+						<!-- 	<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-6">
 					<div class="form-group">
 						<input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" tabindex="5">
@@ -76,27 +80,30 @@
 					</div>
 				</div>
 			</div> -->
-			<button type="button" style =" width: 100%; padding: 8px" class="btn btn-danger" type="submit" ><font size = 4>update</font></button>
-		</form>
+						<button type="button" style=" width: 100%; padding: 8px; background-color: #337ab7" type="submit">
+							<font size=4>update</font>
+						</button>
+					</form>
+				</div>
+			</div>
+			<!-- Modal -->
+			<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+				aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+							<h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
+						</div>
+						<div class="modal-body">
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
+						</div>
+					</div><!-- /.modal-content -->
+				</div><!-- /.modal-dialog -->
+			</div><!-- /.modal -->
+		</div>
 	</div>
-</div>
-<!-- Modal -->
-<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-lg">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
-			</div>
-			<div class="modal-body">
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
-			</div>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-</div>
-        </div>
-     
+
 </div>
