--- a/frontend/src/app/courses/cmanage/cmanage.component.html
+++ b/frontend/src/app/courses/cmanage/cmanage.component.html
@@ -1,19 +1,10 @@
 <app-header select="AddCourse"></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-sm-5">
-      <h3>Add Course</h3><br>
-      <div class="col-xs-6">
-      <label style="font-size: medium">Course Name:</label>
-      <input type="text" class="form-control" [(ngModel)]="courseName" placeholder="Enter the Course Name"><br>
-      <button type="button" [disabled]="!courseName" class="btn btn-primary btn-sm" (click)="submit()">Add
-        Course</button>
-      </div>
-    </div>
-
-    <div class="col-sm-7">
-      <h3>Available Courses</h3><br>
-      <div style="overflow-y:auto; max-height: 350px">  
+    <h2 style="text-align: center">Courses</h2>
+    <div class="col-md-7">
+      <h2></h2><br>
+      <div style="overflow-y:auto; max-height: 350px">
 
         <table class="table table-bordered tableFixHead">
           <thead class="thead-dark">
@@ -24,8 +15,9 @@
           </thead>
           <tbody>
             <tr *ngFor="let course of courseList" style="text-transform: capitalize">
-              <td style="text-align: center">{{course.course_name|titlecase}}</td>
-              <td style="text-align: center"><button class="btn btn-outline-light" (click)="deleteCourse(course.course_id)">
+              <td>{{course.course_name|titlecase}}</td>
+              <td style="text-align: center "><button class="btn btn-outline-light"
+                  (click)="deleteCourse(course.course_id)">
                   <i class="fa fa-trash-o" style="color:red;font-size:15px"></i></button></td>
             </tr>
           </tbody>
@@ -34,5 +26,25 @@
 
 
     </div>
+
+    <div class="col-md-5">
+
+
+      <div class="col-md-8" style="margin-left: 120px; margin-top: 120px">
+        <h2></h2><br>
+        <div class="form-group">
+          <label style="font-size: medium">Course Name:</label>
+          <div class="input-group">
+            <input type="text" class="form-control" [(ngModel)]="courseName" placeholder="Enter the Course Name"><br><br>
+            <!-- <span class="input-group-btn"> -->
+              <button type="button" [disabled]="!courseName" class="btn btn-success btn-sm" (click)="submit()">Add course
+                </button>
+            <!-- </span> -->
+          </div>
+
+        </div>
+      </div>
+    </div>
+
 
   </div>
