--- a/frontend/src/app/courses/form/form.component.css
+++ b/frontend/src/app/courses/form/form.component.css
@@ -16,7 +16,62 @@
 
 }
 
-.btn btn-danger
+.button1
 {
-        text-align: center;
+    margin-left: 55px;
+}
+.button2
+{
+    margin-left: 45px;
+}
+.whole
+{
+    margin: auto;
+}
+
+div.polaroid1 {
+    width: 20%;
+    float: left;
+    height: 1%;
+    margin-left: 20%;
+    cursor: pointer;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 25px;
+  }
+  img.imageIcon
+  {
+      background-color: white;
+  }
+  div.polaroid2 {
+    width: 20%;
+    height: 10%;
+    float: right;
+    margin-right: 20%;
+    cursor: pointer;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 25px;
+  }
+  div.textContainer {
+    text-align: center;
+    padding: 10px 20px;
+  }
+
+.tableFixHead          { overflow-y: auto; height: 100px; }
+.tableFixHead thead th { position: sticky; top: 0; }
+
+table  { border-collapse: collapse; width: 100%; }
+th, td { padding: 8px 16px; }
+th     { background: black; color: white }
+
+.newBatch
+{
+    padding: 10px;
+    margin: 0 0 100px 300px;
+}
+.existing
+{
+    padding: 10px;
+    margin: 130px 0 0 440px;
 }
