--- a/frontend/src/app/courses/view/view.component.css
+++ b/frontend/src/app/courses/view/view.component.css
@@ -22,7 +22,16 @@ table.dataTable thead .sorting_desc_disabled:before {
 .select
 {
     /* border: 1px solid black; */
-    margin: 80px 100px 80px 180px;
-    position: relative;
+    /* height: 20%;
+    width: 20%; */
+    margin: 50px 50px 100px 130px;
+    /* position: relative; */
 
 }
+
+.tableFixHead          { overflow-y: auto; height: 100px; }
+.tableFixHead thead th { position: sticky; top: 0; }
+
+table  { border-collapse: collapse; width: 100%; }
+th, td { padding: 8px 16px; }
+th     { background: black; color: white }
