ui changes for icons

--- a/frontend/src/app/courses/cmanage/cmanage.component.html
+++ b/frontend/src/app/courses/cmanage/cmanage.component.html
@@ -1,4 +1,4 @@
-<app-header select="AddCourse"></app-header>
+<!-- <app-header select="AddCourse"></app-header> -->
 <div class="container">
   <div class="row">
     <h2 style="text-align: center">Courses</h2>
@@ -30,7 +30,7 @@
     <div class="col-md-5">
 
 
-      <div class="col-md-8" style="margin-left: 120px; margin-top: 120px">
+      <div class="col-md-8" style="margin-left: 120px">
         <h2></h2><br>
         <div class="form-group">
           <label style="font-size: medium">Course Name:</label>
