--- a/frontend/src/app/courses/tmanage/tmanage.component.html
+++ b/frontend/src/app/courses/tmanage/tmanage.component.html
@@ -1,4 +1,4 @@
-<app-header select="AddTrainer"></app-header>
+<!-- <app-header select="AddTrainer"></app-header> -->
 <div class="container">
   <h2 style="text-align: center">Trainers</h2>
 
