--- a/frontend/src/app/courses/view/view.component.html
+++ b/frontend/src/app/courses/view/view.component.html
@@ -1,4 +1,4 @@
-<app-header select="View"></app-header>
+<!-- <app-header select="View"></app-header> -->
 <div class="container">
   <h2 class="text-center">Timesheets</h2><br>
 
