--- a/DemandDetailsFrontend/src/app/demand/demandform/demandform.component.html
+++ b/DemandDetailsFrontend/src/app/demand/demandform/demandform.component.html
@@ -1,71 +1,73 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-1"></div>
-        <div class="col-sm-10">
-            <p>Enter Demand Details</p>
-            <form class="container-fluid" #demandForm="ngForm">
-                <div class="row ">
-                    <!-- <div class="col-sm-6">  -->
-                    <div class="col-sm-5">
+  <div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6 col-sm-offset-4">
+        <div class="card">
+            <div class="card-title">
+                Demand Form
+            </div>
+            <div class="card-body">
+                <form>
+                    <div class="row ">
+                      <!-- <div class="col-sm-6">  -->
+                      <div class="col-sm-5">
                         <label>Executive Director</label>
-                        <select class="custom-select" name="location" [(ngModel)]="demandModel.edId"
-                            placeholder="choose location">
-                            <option value="" disabled="true" [selected]>Choose ED</option>
-                            <option *ngFor="let employee of employees | keyvalue" [value]="employee.value.emp_ID">
-                                {{employee.value.emp_NAME}}</option>
-                        </select>
-                    </div>
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-5">
+                        <!-- <select class="custom-select" name="ed" [(ngModel)]="demandModel.edId" [value]="Ed" required>
+                            <option [value]="Ed" selected name="ed">Choose ED </option>       
+                          <option *ngFor="let employee of employees | keyvalue" [value]= "employee.value.empId">{{employee.value.empName}}</option>   
+                        </select> -->
+                        <input list="employees1" class="form-control" placeholder="Select ED" [(ngModel)]="demandModel.edId" name="ed" />
+                        <datalist id="employees1">
+                              <option *ngFor="let employee of employees | keyvalue" [value]= "employee.value.empId">{{employee.value.empName}}</option>
+                        </datalist>
+                      </div>
+                      <div class="col-sm-2"></div>
+                      <div class="col-sm-5">
                         <label>Hiring Manager</label>
-                        <select class="custom-select" name="location" [(ngModel)]="demandModel.hmId"
-                            placeholder="choose location">
-                            <option value="">Choose HR Manager</option>
-                            <option *ngFor="let employee of employees | keyvalue" [value]="employee.value.emp_ID">
-                                {{employee.value.emp_NAME}}</option>
+                        <select class="custom-select" name="hiringManger" [(ngModel)]="demandModel.hmId" [value]="hm" required>
+                          <option [value]="hm" selected name="hm">Choose Hiring Manger</option>  
+                          <option *ngFor="let employee of employees | keyvalue" [value]="employee.value.empId">{{employee.value.empName}}</option>
                         </select>
+                        <!-- <input list="employees1" class="form-control" placeholder="Select ED" [(ngModel)]="demandModel.edId" name="ed" />
+                        <datalist id="employees1">
+                              <option *ngFor="let employee of employees | keyvalue" [value]= "employee.value.empId">{{employee.value.empName}}</option>
+                        </datalist> -->
+                      </div>
+                  </div>
+                  <br>
+                  
+                    <div class="form-group">
+                        <label>Location</label>
+                      <select class="custom-select" name="location" [(ngModel)]="demandModel.lId" [value]="location" required>
+                          <option [value]="location" selected name="loc">Choose Location </option> 
+                                <option *ngFor="let location of locations | keyvalue" [value]="location.value.location_ID">{{location.value.location_NAME}}</option>
+                      </select>
                     </div>
-                </div>
-                <br>
-
-                <div class="form-group">
-                    <label>Location</label>
-                    <select class="custom-select" name="location" [(ngModel)]="demandModel.lId"
-                        placeholder="choose location">
-                        <option value="">Select the location</option>
-                        <option *ngFor="let location of locations | keyvalue" [value]="location.value.location_ID">
-                            {{location.value.location_NAME}}</option>
-                    </select>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <label>Demand</label>
-                        <input type="text" class="form-control" name="hmName" [(ngModel)]="demandModel.demandCount"
-                            placeholder="Enter demand count">
+                    <div class="row">
+                      <div class="col-sm-6">
+                          <label>Demand</label>
+                          <input type="text" class="form-control" name="hmName" [(ngModel)] = "demandModel.demandCount"placeholder="Enter demand count" required>
+                      </div>
+                      <div class="col-sm-6">
+                          <label>Expected start date</label>
+                          <!-- <input type="date" name="start_date" [(ngModel)] = "demandModel.startTime" placeholder="Enter value" required>   -->
+                          <angular2-date-picker [settings]="settings" name="start_date" [(ngModel)] = "demandModel.startTime"></angular2-date-picker>  
+                      </div>
                     </div>
-                    <div class="col-sm-6">
-                        <label>Expected start date</label>
-                        <input type="date" class="form-control" name="start_date" [(ngModel)]="demandModel.startTime"
-                            placeholder="Enter value">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
+                    <div class="row">
+                      <div class="col-sm-12">
                         <label for="">Comment</label>
-                        <textarea name="comments" id="" class="form-control" rows="4"
-                            [(ngModel)]="demandModel.COMMENTS"></textarea>
+                        <textarea name="comments" id="" class="form-control" rows="4"  [(ngModel)]="demandModel.comments"></textarea>
+                      </div>
                     </div>
-                </div>
-                <!-- <input type="text" class="form-control" name="comments" placeholder="comments"> -->
-                <button type="submit" class="save-btn" (click)="onSubmitForm()">Save and add another demand</button>
-            </form>
-
-
+                    <!-- <input type="text" class="form-control" name="comments" placeholder="comments"> -->
+                    <button type="submit" class="save-btn"  (click)="onSubmitForm()">Save Demand</button>
+                  </form>
+            </div>
         </div>
-        <div class="col-sm-1"></div>
+       
+
     </div>
-</div>
-<div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
-    <input class="span2" size="16" type="text" value="12-02-2012" readonly="">
-    <span class="add-on"><i class="icon-calendar"></i></span>
+    <div class="col-sm-3"></div>
+  </div>
 </div>
