--- a/DemandDetailsFrontend/src/app/demand/empform/empform.component.css
+++ b/DemandDetailsFrontend/src/app/demand/empform/empform.component.css
@@ -1,8 +1,13 @@
-p{
-    font-family: Arial, sans-serif;
-    font-size: 3em;
+.card {
+    margin-top:20px;
+    border-width: 2px;
+    border-radius: 10px;
+}
+.card-title {
     text-align: center;
-    color: #45828C;
+    background-color: #f5f5f5;
+    height: 30px;
+
 }
 .save-btn {
     padding: 10px 15px;
@@ -19,18 +24,6 @@ p{
     font-weight: bold;
     border-radius: 5px;
 }
-label{
-    color: #404040;
-    font-family: Arial, sans-serif;
-    font-size: 12px;
-}
-.card {
-    margin-top:20px;
-    border-width: 2px;
-    border-radius: 10px;
-}
-.card-title {
-    text-align: center;
-    background-color: #f5f5f5;
-    height: 30px;
+input {
+    margin-bottom: 20px;
 }
