ui modifications on grad management

--- a/frontend/src/app/gradManagement/admin/showgrads/showgrads.component.html
+++ b/frontend/src/app/gradManagement/admin/showgrads/showgrads.component.html
@@ -5,6 +5,7 @@
         <!-- <div class="panel-heading">
             <h1>Grad Management</h1>
         </div> -->
+        <h1>Grad Management</h1>
         <i style="font-size:24px;color:rgba(54, 53, 53, 0.644)" class="fa">&#xf002;</i>
         <input class="filter" type="text" id="searchByName" [(ngModel)]="nameSearch" name="searchByName" placeholder="Search By Name">
         <input class="filter" type="text" id="searchById" [(ngModel)]="empCodeSearch" name="searchById" placeholder="Search By Employee Code">
