--- a/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.html
+++ b/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.html
@@ -1,9 +1,9 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<div class="card">
-    <h3 class="card-header text-center py-4" style="background-color: rgba(124, 171, 241, 0.473); 
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ --><div class="card">
+     <h3 class="card-header text-center py-4" style="background-color: rgba(124, 171, 241, 0.473); 
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
         <strong>Add/Edit Grad</strong>
-    </h3>
+    </h3> 
 
     <!--Card content-->
 
