--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,7 +8,15 @@
       <ul class="nav navbar-nav">
         <li><a routerLink='/home' style="color:white">Home</a></li>
         
-        <li><a style="color:white"  routerLink='/admin'  >Grad</a></li>
+        <li  class="nav-item dropdown">
+          <a  *ngIf = "admin|| grad" style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Grad
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a *ngIf = "admin"routerLink="/admin">Grad Details</a></li>
+              <li><a *ngIf="grad || admin" routerLink="/grads/fill">Add Details</a></li>
+          </div>
+        </li>   
         <li  class="nav-item dropdown">
             <a style="color:white" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Course
