added modifications on ui for login

--- a/frontend/src/app/main/admin/admin.component.html
+++ b/frontend/src/app/main/admin/admin.component.html
@@ -1,6 +1,6 @@
 
-<html>
-    <body >
+<!-- <html>
+    <body > -->
         <form [formGroup]="userForm"  (submit)="addUserPost()">
           <div class="form-group">
   
@@ -50,5 +50,6 @@
         </tbody>
       </table>
     </div>
-    </body>
-    </html>
+    
+    <!-- </body>
+    </html> -->
