--- a/frontend/src/app/courses/cmanage/cmanage.component.css
+++ b/frontend/src/app/courses/cmanage/cmanage.component.css
@@ -3,4 +3,4 @@
 
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px; }
-th     { background: black; color: white }
+th     { background:#337ab7; color:white; }
