--- a/frontend/src/app/courses/form/form.component.css
+++ b/frontend/src/app/courses/form/form.component.css
@@ -63,7 +63,7 @@ div.polaroid1 {
 
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px; }
-th     { background: black; color: white }
+th     { background: #337ab7; color: white }
 
 .newBatch
 {
