commit for input form

--- a/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.scss
+++ b/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.scss
@@ -1,6 +1,9 @@
 .card-body{
-    margin: 15%;
+    margin: 20%;
     margin-top: 1%;
-    text-align: left;   
+    text-align: left; 
+    font-size: 13px;  
 }
-
+input{
+    font-size: 13px; 
+}
