--- a/frontend/src/app/gradManagement/confirmation-dialog/confirmation-dialog.component.scss
+++ b/frontend/src/app/gradManagement/confirmation-dialog/confirmation-dialog.component.scss
@@ -1,3 +1,14 @@
   .mat-dialog-actions {
       justify-content: flex-end;
   }
+  .mat-dialog-container{
+    display: flex !important;
+    flex-direction: column;
+    position:relative;
+  }
+  .mat-dialog-container > * {
+    display: flex;
+    flex-direction: column;
+}
+
+
