--- a/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.html
+++ b/frontend/src/app/gradManagement/gradmanagement/add-edit/add-edit.component.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <div class="card">
     <h3 class="card-header text-center py-4" style="background-color: rgba(124, 171, 241, 0.473); 
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
@@ -16,8 +16,8 @@
 
             <!-- Employee Code -->
             <div class="form-group row">
-                <label for="employeeCode" class="col-sm-3 col-form-label">Employee Code*</label>
-                <div class="col-sm-9">
+                <label for="employeeCode" class="col-sm-4 col-form-label">Employee Code*</label>
+                <div class="col-sm-8">
                     <input placeholder="Employee Code" type="text" class="form-control" id="employeeCode"
                         [(ngModel)]="grad.employeeCode" name="employeeCode" [readonly]="!adminRole" required />
                 </div>
@@ -25,8 +25,8 @@
 
             <!-- Name -->
             <div class="form-group row">
-                <label for="Name" class="col-sm-3 col-form-label">Name*</label>
-                <div class="col-sm-9">
+                <label for="Name" class="col-sm-4 col-form-label">Name*</label>
+                <div class="col-sm-8">
                     <input placeholder="Name" type="text" class="form-control" id="Name" [(ngModel)]="grad.name"
                         name="Name" [readonly]="!adminRole&&!gradRole" required />
                 </div>
@@ -34,48 +34,48 @@
 
             <!-- Email Id -->
             <div class="form-group row">
-                <label for="email" class="col-sm-3 col-form-label">Email*</label>
-                <div class="col-sm-9">
+                <label for="email" class="col-sm-4 col-form-label">Email*</label>
+                <div class="col-sm-8">
                     <input placeholder="Email" type="email" class="form-control" id="email" [(ngModel)]="grad.email"
                         name="email" [readonly]="!adminRole&&!gradRole" required />
                 </div>
             </div>
             <!-- College -->
             <div class="form-group row">
-                <label for="college" class="col-sm-3 col-form-label">College*</label>
-                <div class="col-sm-9">
+                <label for="college" class="col-sm-4 col-form-label">College*</label>
+                <div class="col-sm-8">
                     <input placeholder="College" type="text" class="form-control" id="college"
                         [(ngModel)]="grad.college" name="college" [readonly]="!adminRole&&!gradRole" required />
                 </div>
             </div>
             <!-- Location Prefernece -->
             <div class="form-group row">
-                <label for="locpreference" class="col-sm-3 col-form-label">Location Preference*</label>
-                <div class="col-sm-9">
+                <label for="locpreference" class="col-sm-4 col-form-label">Location Preference*</label>
+                <div class="col-sm-8">
                     <input placeholder="Location Preference" type="text" class="form-control" id="locpreference"
                         [(ngModel)]="grad.location" name="locpreference" [readonly]="!adminRole&&!gradRole" required />
                 </div>
             </div>
             <!-- Date of Joining -->
             <div class="form-group row">
-                <label for="doj" class="col-sm-3 col-form-label">Date of Joining</label>
-                <div class="col-sm-9">
+                <label for="doj" class="col-sm-4 col-form-label">Date of Joining</label>
+                <div class="col-sm-8">
                     <input placeholder="Date of Joining" type="date" class="form-control" id="doj"
                         [(ngModel)]="grad.joiningDate" name="doj" [readonly]="!adminRole&&!gradRole" />
                 </div>
             </div>
             <!-- Batch -->
             <div class="form-group row">
-                <label for="batch" class="col-sm-3 col-form-label">Batch</label>
-                <div class="col-sm-9">
+                <label for="batch" class="col-sm-4 col-form-label">Batch</label>
+                <div class="col-sm-8">
                     <input placeholder="Batch" type="text" class="form-control" id="batch" [(ngModel)]="grad.batch"
                         name="batch" [readonly]="!adminRole" />
                 </div>
             </div>
             <!-- Date of Joining(Reconfirmation -Y/N) -->
             <div class="form-group row">
-                <label for="dojR" class="col-sm-3 col-form-label">DOJ(Reconfirmation-Y/N)*</label>
-                <div class="col-sm-9">
+                <label for="dojR" class="col-sm-4 col-form-label">DOJ(Reconfirmation-Y/N)*</label>
+                <div class="col-sm-8">
                     <input placeholder="Date of Joining(Reconfirmation-Y/N)" type="text" class="form-control" id="dojR"
                         [(ngModel)]="grad.dateOfJoiningReconfirmation" name="dojR" [readonly]="!adminRole&&!gradRole"
                         required />
@@ -83,24 +83,24 @@
             </div>
             <!-- Course -->
             <div class="form-group row">
-                <label for="course" class="col-sm-3 col-form-label">Course*</label>
-                <div class="col-sm-9">
+                <label for="course" class="col-sm-4 col-form-label">Course*</label>
+                <div class="col-sm-8">
                     <input placeholder="Course" type="text" class="form-control" id="course" [(ngModel)]="grad.course"
                         name="course" [readonly]="!adminRole&&!gradRole" required />
                 </div>
             </div>
             <!-- Branch -->
             <div class="form-group row">
-                <label for="branch" class="col-sm-3 col-form-label">Branch*</label>
-                <div class="col-sm-9">
+                <label for="branch" class="col-sm-4 col-form-label">Branch*</label>
+                <div class="col-sm-8">
                     <input placeholder="Branch" type="text" class="form-control" id="branch" [(ngModel)]="grad.branch"
                         name="branch" [readonly]="!adminRole&&!gradRole" required />
                 </div>
             </div>
             <!-- Current % or CGPA-->
             <div class="form-group row">
-                <label for="currentPercent" class="col-sm-3 col-form-label">Current % or CGPA*</label>
-                <div class="col-sm-9">
+                <label for="currentPercent" class="col-sm-4 col-form-label">Current % or CGPA*</label>
+                <div class="col-sm-8">
                     <input placeholder="Current % or CGPA" type="number" class="form-control" id="currentPercent"
                         [(ngModel)]="grad.cgpa" name="currentPercent" [readonly]="!adminRole&&!gradRole" required
                         step="0.01" min="0" max="10" />
@@ -108,8 +108,8 @@
             </div>
             <!-- Personal Contact Number -->
             <div class="form-group row">
-                <label for="personContact" class="col-sm-3 col-form-label">Personal Contact Number*</label>
-                <div class="col-sm-9">
+                <label for="personContact" class="col-sm-4 col-form-label">Personal Contact Number*</label>
+                <div class="col-sm-8">
                     <input placeholder="Personal Contact Number" type="tel" pattern="[0-9]{10}" minlength="10"
                         maxlength="10" class="form-control" id="personContact" [(ngModel)]="grad.personalNumber"
                         name="personContact" [readonly]="!adminRole&&!gradRole" required />
@@ -117,24 +117,24 @@
             </div>
             <!-- Personal Email Id -->
             <div class="form-group row">
-                <label for="personalemail" class="col-sm-3 col-form-label">Personal Email*</label>
-                <div class="col-sm-9">
+                <label for="personalemail" class="col-sm-4 col-form-label">Personal Email*</label>
+                <div class="col-sm-8">
                     <input placeholder="Personal Email" type="email" class="form-control" id="personalemail"
                         [(ngModel)]="grad.personalEmail" name="email" [readonly]="!adminRole&&!gradRole" required />
                 </div>
             </div>
             <!-- Date of Birth -->
             <div class="form-group row">
-                <label for="dob" class="col-sm-3 col-form-label">Date of Birth*</label>
-                <div class="col-sm-9">
+                <label for="dob" class="col-sm-4 col-form-label">Date of Birth*</label>
+                <div class="col-sm-8">
                     <input placeholder="Date of Birth" type="date" class="form-control" id="dob" [(ngModel)]="grad.dob"
                         name="dob" [readonly]="!adminRole&&!gradRole" required />
                 </div>
             </div>
             <!-- Native Place  -->
             <div class="form-group row">
-                <label for="nativepPlace" class="col-sm-3 col-form-label">Native Place</label>
-                <div class="col-sm-9">
+                <label for="nativepPlace" class="col-sm-4 col-form-label">Native Place</label>
+                <div class="col-sm-8">
                     <input placeholder="Native Place" type="text" class="form-control" id="nativePlace"
                         [(ngModel)]="grad.nativePlace" name="nativePlace" [readonly]="!adminRole&&!gradRole" />
                 </div>
@@ -142,8 +142,8 @@
 
             <!-- Current Place  -->
             <div class="form-group row">
-                <label for="currentPlace" class="col-sm-3 col-form-label">Current Place*</label>
-                <div class="col-sm-9">
+                <label for="currentPlace" class="col-sm-4 col-form-label">Current Place*</label>
+                <div class="col-sm-8">
                     <input placeholder="Current Place" type="text" class="form-control" id="currentPlace"
                         [(ngModel)]="grad.currentPlace" name="currentPlace" [readonly]="!adminRole&&!gradRole"
                         required />
@@ -151,8 +151,8 @@
             </div>
             <!-- Parent's Contact Number -->
             <div class="form-group row">
-                <label for="parentContact" class="col-sm-3 col-form-label">Parent's Contact Number</label>
-                <div class="col-sm-9">
+                <label for="parentContact" class="col-sm-4 col-form-label">Parent's Contact Number</label>
+                <div class="col-sm-8">
                     <input placeholder="Parent's Contact Number" type="tel" pattern="[0-9]{10}" minlength="10"
                         maxlength="10" class="form-control" id="parentContact" [(ngModel)]="grad.parentContact"
                         name="parentContact" [readonly]="!adminRole&&!gradRole" />
@@ -160,8 +160,8 @@
             </div>
             <!-- Parent's Postal Address -->
             <div class="form-group row">
-                <label for="parentAddress" class="col-sm-3 col-form-label">Parent's Postal Address</label>
-                <div class="col-sm-9">
+                <label for="parentAddress" class="col-sm-4 col-form-label">Parent's Postal Address</label>
+                <div class="col-sm-8">
                     <input placeholder="Parent's Postal Address" type="text" class="form-control" id="parentAddress"
                         [(ngModel)]="grad.parentAddress" name="parentAddress" [readonly]="!adminRole&&!gradRole" />
                 </div>
@@ -169,8 +169,8 @@
 
             <!-- CV-Link -->
             <div class="form-group row">
-                <label for="cvLink" class="col-sm-3 col-form-label">CV Link*</label>
-                <div class="col-sm-9">
+                <label for="cvLink" class="col-sm-4 col-form-label">CV Link*</label>
+                <div class="col-sm-8">
                     <input placeholder="CV Link" type="text" class="form-control" id="cvLink" [(ngModel)]="grad.cvLink"
                         name="cvLink" [readonly]="!adminRole&&!gradRole" required />
                 </div>
@@ -181,7 +181,7 @@
             </div>
 
             <div class="form-group row">
-                <div class="col-sm-9">
+                <div class="col-sm-8">
                     <button type="submit" class="btn btn-success">Submit</button>
                 </div>
             </div>
