changes in app-routing

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -14,7 +14,7 @@
               Course
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a *ngIf="admin" routerLink="/view">Timesheets</a></li>
+                <li><a  routerLink="/view">Timesheets</a></li>
                 <li><a *ngIf="admin " routerLink="/course">Courses</a></li>
                 <li><a *ngIf="admin" routerLink="/trainer">Trainers</a></li>
                 <li><a *ngIf="admin" routerLink="/batch">Batches</a></li>
