changes on styling

--- a/frontend/src/app/courses/form/form.component.html
+++ b/frontend/src/app/courses/form/form.component.html
@@ -127,7 +127,8 @@
         </tr>
       </tbody>
     </table>
-    <button class="btn btn-primary center-block "   [disabled]="!TrainerAllocationForm.valid" (click)='callSubmit()'>Submit</button>
+    <button class="btn btn-primary center-block "   [disabled]="!TrainerAllocationForm.valid" 
+    (click)='callSubmit()'>Submit</button><br><br>
 
   </div>
 </div>
