--- a/frontend/src/app/courses/view/view.component.html
+++ b/frontend/src/app/courses/view/view.component.html
@@ -11,6 +11,7 @@
   </div><br>
 
   <div *ngIf="var1" style="margin-top: 50px">
+    <div style="overflow-y:auto; max-height: 350px; margin-top: 80px">
     <table class="table table-bordered table-responsive tableFixHead">
       <thead>
         <tr>
@@ -63,7 +64,8 @@
         </tr>
       </tbody>
 
-    </table>
+    </table><br>
+  </div>
   </div>
 
   <div *ngIf="var2">
