--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -19,7 +19,22 @@
                 <li><a *ngIf="admin" routerLink="/trainer">Trainers</a></li>
                 <li><a *ngIf="admin" routerLink="/batch">Batches</a></li>
             </div>
-          </li>     <li><a  *ngIf="admin || trainer"  style="color:white">Score</a></li>
+            </li>     
+
+            <!-- <li class="nav-item dropdown">
+              <a role="button" class="nav-link dropdown-toggle" style="color: white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Course
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a routerLink="/view">Timesheets</a></li>
+                <li><a routerLink="/course">Courses</a></li>
+                <li><a routerLink="/trainer">Trainers</a></li>
+                <li><a routerLink="/batch">Batches</a></li>
+              </ul>
+            </li> -->
+    
+
+
+          <li><a  *ngIf="admin || trainer"  style="color:white">Score</a></li>
         <li><a style="color:white">Ed</a></li>
         <li><a routerLink='/admin-user'style="color:white" *ngIf="admin">Admin</a></li>
         <li ><a routerLink='/user' style="color:white">Profile</a></li>
