changed table color

--- a/frontend/src/app/main/admin/admin.component.html
+++ b/frontend/src/app/main/admin/admin.component.html
@@ -24,7 +24,7 @@
   
   <div class="container" >
       <table class="table table-striped">
-        <thead style="background-color: black;">
+        <thead style="background-color: #337ab7;">
             <tr>
                 <th style="color:white;">UID</th>
                 <th style="color:white;">FIRSTNAME</th>
