--- a/frontend/src/app/main/frontpage/frontpage.component.html
+++ b/frontend/src/app/main/frontpage/frontpage.component.html
@@ -1,5 +1,5 @@
 <div class="navbar navbar-inverse navbar-static-top" style="height: 60px; background-color:#337ab7">
-        <div class="container">
+        <div class="container-fluid">
          <div class="row">
          <div class="col-xs-3">
              <div class="row">
