--- a/frontend/src/app/main/resetpassword/resetpassword.component.html
+++ b/frontend/src/app/main/resetpassword/resetpassword.component.html
@@ -7,7 +7,7 @@
                         <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Email ID" 
                                 formControlName="emailId" ><br>
-                                <button type="submit" class="btn btn-primary login-btn" (click)="resetUser()">Submit</button><br/><br>
+                                <button type="submit" class="btn btn-primary login-btn" (click)="resetUser()">Get Otp</button><br/><br>
                                 <input type="text" class="form-control" placeholder="Enter OTP" 
                                 formControlName="otp" ><br>
                                 <button  class="btn btn-primary login-btn" (click)="verifyOtp()" >Submit</button><br/><br>
