--- a/frontend/src/app/main/signup/signup.component.html
+++ b/frontend/src/app/main/signup/signup.component.html
@@ -92,7 +92,7 @@
           </div>
 
             <button [disabled]= "isvalid()" class="btn btn-primary login-btn" (click) = "signUpSubmit()">Submit</button><br/>
-            <button class="btn btn-primary login-btn" style=" margin-top: 10px;">Cancel</button><br/>
+            <button class="btn btn-primary login-btn" style=" margin-top: 10px;" routerLink="/login">Cancel</button><br/>
             <div class="space-top-10">
               <p>By proceeding, You agree with our <a>Terms of Service</a> & <a>Privacy Policy</a></p>
             </div>
