final working code

--- a/assess-frontend/src/app/report/front/front.component.html
+++ b/assess-frontend/src/app/report/front/front.component.html
@@ -76,7 +76,7 @@
                       <th>Score</th>
                       
                       <th>Success %</th>
-                       <th>Rank</th> 
+                       <!-- <th>Rank</th>  -->
                     </tr>
                 </thead>
                 <tbody>
@@ -87,7 +87,7 @@
                    
                     <!-- <td>{{  ( (((i+1)*25)-1)/99 )*100      }}</td> -->
                     <td>{{product.successPercentage}}</td>
-                    <td>{{product.rankGrad}}</td>
+                    <!-- <td>{{product.rankGrad}}</td> -->
               
                     <!-- <a routerLink="/detail/{{product.gradEmployee.employeeId}}"> <td>{{product.gradEmployee.employeeId}}</td> </a>
                     <td>{{product.gradEmployee.employeeName}}</td> 
