--- a/assess-frontend/src/app/report/new-details/new-details.component.html
+++ b/assess-frontend/src/app/report/new-details/new-details.component.html
@@ -140,13 +140,13 @@
           </div>
             
            <!-- incorrect ques -->
-           <div class="form-group row">
+           <!-- <div class="form-group row">
             <label for="incorrectquestions" class="col-sm-3 col-form-label">Incorrect Questions</label>
             <div class="col-sm-9">
                 <input placeholder="Incorrect Questions" type="text" class="form-control" id="incorrectquestions"
                     [(ngModel)]="details.incorrectQuestions" name="testname"  required />
-            </div>
-        </div>
+            </div> -->
+        <!-- </div> -->
          <!-- success % -->
          <div class="form-group row">
           <label for="successperc" class="col-sm-3 col-form-label">Success Percentage</label>
@@ -164,13 +164,13 @@
         </div>
     </div>
   
-    <div class="form-group row">
+    <!-- <div class="form-group row">
       <label for="rank" class="col-sm-3 col-form-label">Rank</label>
       <div class="col-sm-9">
           <input placeholder="Rank" type="text" class="form-control" id="rank"
               [(ngModel)]="details.rank" name="testname"  required />
       </div>
-  </div>
+  </div> -->
       
         
             
