--- a/assess-frontend/src/app/report/student-details/student-details.component.html
+++ b/assess-frontend/src/app/report/student-details/student-details.component.html
@@ -62,7 +62,7 @@
                         <th>Test Name</th>
                           <th>Score</th>
                           
-                          <th>Rank</th>
+                          <!-- <th>Rank</th> -->
                           
                     </tr>
                 </thead>
@@ -79,7 +79,7 @@
                     <td>{{c.gradTest.testName}}</td>
                     <td>{{c.score}}</td>
                     
-                    <td>{{i+1}}</td>
+                    <!-- <td>{{i+1}}</td> -->
                    
                 </tr> 
                 </tbody>
